manifests/06_mysql-db-create.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: hypercloud4-system
  labels:
    hypercloud4: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      hypercloud4: mysql
  template:
    metadata:
      labels:
        hypercloud4: mysql
    spec:
      nodeSelector:
        kubernetes.io/hostname: $HOSTNAME
      containers:
      - name: mysql
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          subPath: mysql
          name: mysql-data
        - mountPath: /docker-entrypoint-initdb.d
          name: mysql-initdb-config
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "1"
            memory: "2Gi"
      volumes:
      - hostPath:
          path: /mnt/mysql
          type: ""
        name: mysql-data
      - name: mysql-initdb-config
        configMap:
          name: mysql-initdb-config

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: hypercloud4-system
spec:
  ports:
  - name: "mysql"
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    hypercloud4: mysql
  type: NodePort
