manifests/04_webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: hypercloud4-mutator
webhooks:
  - name: hypercloud4-webhook.mutating.metadata
    clientConfig:
      service:
        name: hypercloud-webhook-svc
        namespace: hypercloud5-system
        path: "/api/webhook/metadata"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZiakNDQTFhZ0F3SUJBZ0lKQUxJN1QwLyt6ckg1TUEwR0NTcUdTSWIzRFFFQkN3VUFNRk14Q3pBSkJnTlYKQkFZVEFrdFNNUXN3Q1FZRFZRUUlEQUpEUVRFV01CUUdBMVVFQnd3TlUyRnVJRVp5WVc1amFYTmpiekVOTUFzRwpBMVVFQ2d3RVZHMWhlREVRTUE0R0ExVUVBd3dIVkcxaGVDQkRRVEFlRncweU1UQXhNakF3TXpRNU16bGFGdzB6Ck1UQXhNVGd3TXpRNU16bGFNRk14Q3pBSkJnTlZCQVlUQWt0U01Rc3dDUVlEVlFRSURBSkRRVEVXTUJRR0ExVUUKQnd3TlUyRnVJRVp5WVc1amFYTmpiekVOTUFzR0ExVUVDZ3dFVkcxaGVERVFNQTRHQTFVRUF3d0hWRzFoZUNCRApRVENDQWlJd0RR [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["claims.tmax.io"]
        apiVersions: ["v1alpha1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["cluster.tmax.io"]
        apiVersions: ["v1alpha1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["tmax.io"]
        apiVersions: ["v1"]
        resources: ["*"]
    matchPolicy: Equivalent
    sideEffects: None
    admissionReviewVersions: ["v1beta1"]
    timeoutSeconds: 10
    namespaceSelector:
      matchExpressions:
      - key: webhook
        operator: NotIn 
        values: ["false"]
    failurePolicy: Fail
