manifests/07_validate.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: hypercloud4-validator
webhooks:
  - name: hypercloud4-webhook.validating.test
    clientConfig:
      service:
        name: hypercloud4-webhook-svc
        namespace: hypercloud4-system
        path: "/api/webhook/inject/test"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURYRENDQWtTZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJHTVFzd0NRWURWUVFHRXdKTFVqRVYKTUJNR0ExVUVDZ3dNYkdWemMzUnBaaUJKYm1NdU1TQXdIZ1lEVlFRRERCZHNaWE56ZEdsbWN5QlRaV3htSUZOcApaMjVsWkNCRFFUQWVGdzB5TURBNU1Ea3dOekEyTWpkYUZ3MHpNREE1TURjd056QTJNamRhTUVZeEN6QUpCZ05WCkJBWVRBa3RTTVJVd0V3WURWUVFLREF4c1pYTnpkR2xtSUVsdVl5NHhJREFlQmdOVkJBTU1GMnhsYzNOMGFXWnoKSUZObGJHWWdVMmxuYm1Wa0lFTkJNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQQp3bFk4d2h0TmMw [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
    matchPolicy: Equivalent
    sideEffects: None
    admissionReviewVersions: ["v1beta1"]
    timeoutSeconds: 10
    objectSelector:
      matchLabels:
        tmax.io/log-collector-injection: enabled
    failurePolicy: Fail
